get basic search working

--- a/lakefile.toml
+++ b/lakefile.toml
@@ -8,3 +8,8 @@ name = "SortingNetworkSearch"
 [[lean_exe]]
 name = "sortingnetworksearch"
 root = "Main"
+
+[[require]]
+name = "batteries"
+scope = "leanprover-community"
+rev = "main"
