--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,15 +1,5 @@
 {"version": "1.1.0",
  "packagesDir": ".lake/packages",
- "packages":
- [{"url": "https://github.com/leanprover/lean4-cli",
-   "type": "git",
-   "subDir": null,
-   "scope": "leanprover",
-   "rev": "cacb481a1eaa4d7d4530a27b606c60923da21caf",
-   "name": "Cli",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "cacb481a1eaa4d7d4530a27b606c60923da21caf",
-   "inherited": false,
-   "configFile": "lakefile.toml"}],
- "name": "SortingNetworkSearch",
+ "packages": [],
+ "name": "SortingNetworkTools",
  "lakeDir": ".lake"}
